@@ -6,8 +6,6 @@ calculateLocalSearchFeatures = function(feat.object, control, ...) {
   measureTime(expression({
     X = extractFeatures(feat.object)
     y = extractObjective(feat.object)
-    if (!feat.object$minimize)
-      y = -1 * y
     d = feat.object$dim
     if (missing(control))
       control = list()
@@ -16,9 +14,14 @@ calculateLocalSearchFeatures = function(feat.object, control, ...) {
     opt.algo = control_parameter(control, "ela_local.optim_method", "L-BFGS-B")
     opt.algo.control = control_parameter(control, "ela_local.optim_method_control", 
       list())
-    opt.algo.control$fnscale = -1
     low = control_parameter(control, "ela_local.optim.lower", ifelse(opt.algo == "L-BFGS-B", feat.object$lower, -Inf))
     upp = control_parameter(control, "ela_local.optim.upper", ifelse(opt.algo == "L-BFGS-B", feat.object$upper, Inf))
+    if (!feat.object$minimize) {
+      y = -1 * y
+      opt.algo.control$fnscale = -1
+    } else {
+      opt.algo.control$fnscale = 1
+    }
     id.seed = control_parameter(control, "ela_local.sample_seed", sample(1:1e6, 1))
     clust.method = control_parameter(control, "ela_local.clust_method", "single")
     clust.cutfun = control_parameter(control, "ela_local.clust_cut_function", 
